libreoffice (1:7.4.3~rc1~git20221001-1) UNRELEASED; urgency=medium

  * New upstream snapshot

 -- Rene Engelhard <rene@debian.org>  Wed, 21 Sep 2022 18:08:40 +0200

libreoffice (1:7.4.2-1) unstable; urgency=medium

  * LibreOffice 7.4.2 release (identical to rc3)

  * upload to unstable 

 -- Rene Engelhard <rene@debian.org>  Mon, 10 Oct 2022 19:32:31 +0200

libreoffice (1:7.4.2~rc3-1) experimental; urgency=medium

  * New upstream release candidate 

 -- Rene Engelhard <rene@debian.org>  Mon, 10 Oct 2022 19:06:49 +0200

libreoffice (1:7.4.2~rc2-1) experimental; urgency=medium

  * New upstream release candidate

  * debian/rules:
    - add missing >&3 to ufcq calls in bug scripts
    - fix build-depends-on-obsolete-package
      (s/libfreetype6-dev/libfreetype-dev/,
      s/libfontconfig1-dev/libfontconfig-dev/) 
  * debian/control.gtk4.in: remove "when running under GNOME"
    from package description since GNOME implies gtk3
  * debian/control.{gtk4,qt5,qt6}.in: mention the need to
    manually export SAL_USE_VCLPLUGIN

 -- Rene Engelhard <rene@debian.org>  Thu, 06 Oct 2022 17:44:16 +0200

libreoffice (1:7.4.2~rc1-2) experimental; urgency=medium

  * reupload with correct control... 

 -- Rene Engelhard <rene@debian.org>  Wed, 21 Sep 2022 18:08:40 +0200

libreoffice (1:7.4.2~rc1-1) experimental; urgency=medium

  * New upstream release candidate

 -- Rene Engelhard <rene@debian.org>  Wed, 21 Sep 2022 17:36:50 +0200

libreoffice (1:7.4.1-1) unstable; urgency=medium

  * LibreOffice 7.4.1 final release (identical to rc2)
    (closes: #1018173)

  * debian/source/lintian-overrides: update for latest copyright changes

 -- Rene Engelhard <rene@debian.org>  Sat, 17 Sep 2022 19:49:58 +0200

libreoffice (1:7.4.1~rc2-3) unstable; urgency=medium

  * upload to unstable

  * debian/rules:
    - don't depend on node-prismjs on bullseye-backport since there it
      depends on nodejs... 
    - also use node-prismjs/node-normalize.css for the build and add them