@@ -1,2 +1,2 @@
-report-with: libreoffice-core
+report-with: libreoffice-core libreoffice-core-nogui
 package-status: unixodbc libmyodbc odbc-postgresql libsqliteodbc tdsodbc mdbtools libmariadb-java libmysql-java libpg-java libsapdbc-java
