@@ -1,1 +1,1 @@
-report-with: libreoffice-common libreoffice-java-common fonts-opensymbol
+report-with: libreoffice-common libreoffice-java-common fonts-opensymbol ure-java
