@@ -1,1 +1,1 @@
-report-with: libreoffice-core libreoffice-draw
+report-with: libreoffice-core libreoffice-core-nogui libreoffice-draw libreoffice-draw-nogui
