@@ -1,1 +1,1 @@
-report-with: libreoffice-core
+report-with: libreoffice-core libreoffice-core-nogui
