@@ -1,5 +1,14 @@
 #!/bin/sh
 
 echo "" >&3
-echo "Java:" >&3
+echo "Java (javaldx):" >&3
 /usr/lib/libreoffice/program/javaldx >&3
+
+echo "" >&3
+echo "Java:" >&3
+#_lo_profile_ver=`echo @OOVER@ | cut -d. -f1`
+_lo_profile_ver=4
+if [ -d "$HOME/.config/libreoffice/$_lo_profile_ver" ]; then
+	grep -ri java $HOME/.config/libreoffice/$_lo_profile_ver/user/config/javasettings_*xml >&3
+fi
+
